ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: ingress-hosts
spec:
  rules:
  - host: www.vaijrn.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: my-multy-pod-service
              port:
                number: 80
  - host: web1.vaijrn.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: my-single-pod-service
              port:
                number: 80
