ingress-paths.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: ingress-hosts
spec:
  rules:
  - host: www.vaijrn.com
    http:
      paths:
        - path: "/page1"
          pathType: Prefix
          backend:
            service:
              name: my-autoscaling-pod-service
              port:
                number: 80

        - path: "/page2"
          pathType: Prefix
          backend:
            service:
              name: my-autoscaling-pod-service
              port:
                number: 80

        - path: "/page3"
          pathType: Prefix
          backend:
            service:
              name: my-autoscaling-pod-service
              port:
                number: 80
